--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@
   </div>
 </nav>
         <div class="ad-top">
-            <ins
-                class="kakao_ad_area"
-                style="display: none;"
-                data-ad-unit="DAN-tSOzweKZG9JwByZT"
-                data-ad-width="320"
-                data-ad-height="50"
-            ></ins>
+            <ins class="kakao_ad_area" style="display:none;" 
+                 data-ad-unit    = "DAN-7Zz1jLdquryJ1sMb" 
+                 data-ad-width   = "320" 
+                 data-ad-height  = "50"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
             <script
                 type="text/javascript"
                 src="//t1.daumcdn.net/kas/static/ba.min.js"
@@ -158,7 +156,7 @@
             <ins
                 class="kakao_ad_area"
                 style="display: none;"
-                data-ad-unit="DAN-APNIy7ybOJMXarxL"
+                data-ad-unit="DAN-Ph2oaYMyGWj1IoDw"
                 data-ad-width="320"
                 data-ad-height="100"
             ></ins>
@@ -171,7 +169,7 @@
             <ins
                 class="kakao_ad_area"
                 style="display: none;"
-                data-ad-unit="DAN-UphDrchFfTsZtB1P"
+                data-ad-unit="DAN-N0xXqvGSOLn0kd1b"
                 data-ad-width="320"
                 data-ad-height="100"
             ></ins>
@@ -186,7 +184,7 @@
             <ins
                 class="kakao_ad_area"
                 style="display: none;"
-                data-ad-unit="DAN-oljcwH4nlNXWhlow"
+                data-ad-unit="DAN-rS59XRp56wPTaB8i"
                 data-ad-width="300"
                 data-ad-height="250"
             ></ins>
