--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <meta property="og:description" content="자신과 닮은 근육을 가진 연예인을 찾아보세요!" />
         <meta property="og:image" content="image/kakaotalkimagepng.png" />
         <link rel="shortcut icon" href="image/logofavicon.ico" type="image/x-icon" />
-        <link rel="icon" href="image/kakaotalkimagepng.png" type="image/x-icon" />
+        <link rel="icon" href="image/logofavicon.ico" type="image/x-icon" />
 
      <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-602526e59091d8c0"></script>
