--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             break;
                         case '박재범':
                             resultMessage = '당신은 찌찌파티 박재범과 근육 닮은꼴!';
-                            resultImage = 'testimage/lee.png';
+                            resultImage = 'testimage/jaypark.png';
                             break;
                         case '토르':
                             resultMessage = '당신은 토르 크리스헴스워스와 근육 닮은꼴!';
