--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </script>
         <script type="text/javascript">
             let URL;
-            const urlMale = 'https://teachablemachine.withgoogle.com/models/vCzKJNjp4/';
+            const urlMale = 'https://teachablemachine.withgoogle.com/models/gXKcgGSkl/';
             // const urlFemale = '';
             let model, webcam, labelContainer, maxPredictions;
             // Load the image model and setup the webcam
@@ -413,6 +413,26 @@
                         case '지기tv':
                             resultMessage = '당신은 유튜버 지기tv와 근육 닮은꼴!';
                             resultImage = 'testimage/jiggy.png';
+                            break;
+                             case '훈튜브':
+                            resultMessage = '당신은 유튜버 훈튜브와 근육 닮은꼴!';
+                            resultImage = 'testimage/1.png';
+                            break;
+                             case '고러쉬':
+                            resultMessage = '당신은 유튜버 고러쉬와 근육 닮은꼴!';
+                            resultImage = 'testimage/2.png';
+                            break;
+                             case '덩어리갓대':
+                            resultMessage = '당신은 유튜버 덩어리갓대와 근육 닮은꼴!';
+                            resultImage = 'testimage/3.png';
+                            break;
+                             case '강경원':
+                            resultMessage = '당신은 레전드 강경원 선수와 근육 닮은꼴!';
+                            resultImage = 'testimage/4.png';
+                            break;
+                             case '프랭크 매드라노':
+                            resultMessage = '당신은 맨몸운동의 전설 프랭크 매드라노와 근육 닮은꼴!';
+                            resultImage = 'testimage/5.png';
                             break;
                         default:
                             resultMessage = '알 수 없음';
